Feito as tasks do dia 21 menos a de scroll com icone

--- a/src/app/pages/ncs/create-prop/create-prop-stepper/create-prop-stepper.component.css
+++ b/src/app/pages/ncs/create-prop/create-prop-stepper/create-prop-stepper.component.css
@@ -26,3 +26,7 @@
         display: none;
     }
 }
+::ng-deep .p-steps-override span.p-steps-number {
+    background: #B48C28 !important;
+    color: #fff !important;
+}
