--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.css
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.css
@@ -38,5 +38,7 @@ i {
   margin-left: 3px;
   margin-right: 3px;
 }
-
-
+::ng-deep .p-steps-override span.p-steps-number {
+  background: #B48C28 !important;
+  color: #fff !important;
+}
