--- a/src/app/pages/ncs/import-json/import-json.component.html
+++ b/src/app/pages/ncs/import-json/import-json.component.html
@@ -1,5 +1,5 @@
 
-<button class="btn btn-dark inicio mt-3" routerLink="/ncs">{{'import.home'| translate}}</button>
+<button class="btn btn-dark inicio mt-3" routerLink="/ncs" style="background-color: #00344D;">{{'import.home'| translate}}</button>
 
 <h1 class="mt-4">{{'import.ImportClients'| translate}}</h1>
 <p-fileUpload
