--- a/src/app/pages/ncs/sgq-evaluation/sgq-stepper/sgq-stepper.component.css
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-stepper/sgq-stepper.component.css
@@ -26,3 +26,7 @@
         display: none;
     }
 }
+::ng-deep .p-steps-override span.p-steps-number {
+    background: #B48C28 !important;
+    color: #fff !important;
+}
