--- a/src/app/pages/ncs/sgq-evaluation/sgq-stepper/sgq-stepper.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-stepper/sgq-stepper.component.html
@@ -17,6 +17,7 @@
         [model]="items"
         [readonly]="true"
         [activeIndex]="stepPosition"
+        styleClass="p-steps-override"
       ></p-steps>
     </div>
     <div class="d-flex justify-content-end p-0 last-button">
