Atividades: Nas informações da NC, o número da op, pc,pc,cc e nf-e está aparecendo mas está sem título. Além disso deve ser posicionado em linha; Na tela de criação de NC a caixa de busca do parceiro deve ficar desabilitada enquanto o tipo do parceiro não for escolhido;

--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -79,6 +79,7 @@
         class="p-autocomplete"
         [placeholder]="label"
         field="name"
+        [disabled] = "!nonComplicanceService.nc?.tipos_parceiro_item"
       >
         <ng-template let-brand pTemplate="  ">
           <div>
