--- a/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
+++ b/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
@@ -1,183 +1,186 @@
 <div class="div-ident-parceiro row">
-  <h1 class="titulo-parceiro">{{ "newNC.step1.product.title" | translate }}</h1>
-  <div class="dados-produto col razao-social">
-    <div class="d-flex">
-     
-      <h2 class="mr-2">
-        {{ aboutSrvc.nc?.product?.description }}
-      </h2>
-      <p-chip>
-        <i class="bi bi-ticket-perforated mr-2"></i>
-        {{ aboutSrvc.nc?.product?.code || "" }}
-      </p-chip>
+    <h1 class="titulo-parceiro">{{ "newNC.step1.product.title" | translate }}</h1>
+    <div class="dados-produto col razao-social">
+        <div class="d-flex">
+
+            <h2 class="mr-2">
+                {{ aboutSrvc.nc?.product?.description }}
+            </h2>
+            <p-chip>
+                <i class="bi bi-ticket-perforated mr-2"></i>
+                {{ aboutSrvc.nc?.product?.code || "" }}
+            </p-chip>
+        </div>
+        <p class="d-block">
+            {{ aboutSrvc.nc?.product?.name }}
+        </p>
     </div>
-    <p class="d-block">
-      {{ aboutSrvc.nc?.product?.name }}
-    </p>
-  </div>
-  <div class="dados-produto col">
-    <div class="d-flex flex-row justify-content-around">
-      <div class="contato-info d-flex flex-row">
-        <i class="bi bi-calculator"></i>
-        <div>
+    <div class="dados-produto col">
+        <div class="d-flex flex-row justify-content-around">
+            <div class="contato-info d-flex flex-row">
+                <i class="bi bi-calculator"></i>
+                <div>
           <span class="info-titulo">{{
-            "newNC.step1.product.amount" | translate
-          }}</span>
-          <br />
-          <span class="info-dados">{{ aboutSrvc.nc?.quant_total || "" }}</span>
-        </div>
-      </div>
-      <div class="contato-info d-flex flex-row">
-        <i class="bi bi-calculator"></i>
-        <div>
+              "newNC.step1.product.amount" | translate
+              }}</span>
+                    <br/>
+                    <span class="info-dados">{{ aboutSrvc.nc?.quant_total || "" }}</span>
+                </div>
+            </div>
+            <div class="contato-info d-flex flex-row">
+                <i class="bi bi-calculator"></i>
+                <div>
           <span class="info-titulo">{{
-            "newNC.step1.product.amountNC" | translate
-          }}</span>
-          <br />
-          <span class="info-dados">{{ aboutSrvc.nc?.quant_nc || "" }}</span>
-        </div>
-      </div>
-      <div class="contato-info d-flex flex-row">
-        <i class="bi bi-percent"></i>
-        <div>
+              "newNC.step1.product.amountNC" | translate
+              }}</span>
+                    <br/>
+                    <span class="info-dados">{{ aboutSrvc.nc?.quant_nc || "" }}</span>
+                </div>
+            </div>
+            <div class="contato-info d-flex flex-row">
+                <i class="bi bi-percent"></i>
+                <div>
           <span class="info-titulo">{{
-            "newNC.step1.product.percent" | translate
-          }}</span>
-          <br />
-          <span class="info-dados">{{ getPercent() || "" }}%</span>
+              "newNC.step1.product.percent" | translate
+              }}</span>
+                    <br/>
+                    <span class="info-dados">{{ getPercent() || "" }}%</span>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 <div class="div-ident-parceiro mt-3">
-  <h2>
-    <i class="bi bi-people"></i>
-    {{ "newNC.review.checkpoint" | translate }}
-  </h2>
-  <div class="d-flex flex-column">
-    <div class="d-flex flex-row">
-      <i class="pi pi-directions mr-1"></i>
-      <div>
+    <h2>
+        <i class="bi bi-people"></i>
+        {{ "newNC.review.checkpoint" | translate }}
+    </h2>
+    <div class="d-flex flex-column">
+        <div class="d-flex flex-row">
+            <i class="pi pi-directions mr-1"></i>
+            <div class="d-flex">
         <span class="info-titulo">{{
-          aboutSrvc.nc?.tipo_controle || "global.empty" | translate
-        }}</span>
-        <div class="d-flex flex-row mt-2">
+            aboutSrvc.nc?.tipo_controle || "global.empty" | translate
+            }}</span>
+                <div
+                        class="d-flex flex-row ml-5"
+                        *ngIf="this.aboutSrvc.nc?.tipo_controle != 'PR'"
+                >
+                    <i class="bi bi-calculator"></i>
+                    <span class="info-titulo">{{("global.number" | translate) + ": " + (returnNumber())}}</span>
+                </div>
+                <div class="d-flex flex-row mt-2">
           <span class="info-dados">{{
-            aboutSrvc.nc?.procedure?.code || ""
-          }}</span>
+              aboutSrvc.nc?.procedure?.code || ""
+              }}</span>
 
-          <span class="info-dados ml-3">{{
-            aboutSrvc.nc?.procedure?.description || ""
-          }}</span>
+                    <span class="info-dados ml-3">{{
+                        aboutSrvc.nc?.procedure?.description || ""
+                        }}</span>
 
-          <span class="info-dados ml-3">{{
-            aboutSrvc.nc?.procedure?.rev || ""
-          }}</span>
+                    <span class="info-dados ml-3">{{
+                        aboutSrvc.nc?.procedure?.rev || ""
+                        }}</span>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div
-    class="d-flex flex-row"
-    *ngIf="this.aboutSrvc.nc?.tipo_controle != 'PR'"
-  ><span class="info-titulo">{{returnNumber()}}</span></div>
-    <div
-      class="dados-parceiro razao-social item"
-      *ngIf="returnFile('pontoControle').length > 0"
-    >
-      <h2 class="mr-2 mb-3">
-        <i class="bi bi-paperclip"></i>
-        {{ "global.fileInput.attachments" | translate }}
-      </h2>
-      <div *ngIf="!aboutSrvc.displayPdf">
-        <p-carousel
-          [value]="returnFile('pontoControle')"
-          [numVisible]="3"
-          [numScroll]="3"
-          [showIndicators]="false"
+        <div
+                class="dados-parceiro razao-social item mt-3"
+                *ngIf="returnFile('pontoControle').length > 0"
         >
-          <ng-template let-file pTemplate="item">
-            <i class="bi bi-file-earmark fs-1"></i>
-            <p>{{ file.name }}</p>
-          </ng-template>
-        </p-carousel>
-      </div>
+            <h2 class="mr-2 mb-3">
+                <i class="bi bi-paperclip"></i>
+                {{ "global.fileInput.attachments" | translate }}
+            </h2>
+            <div *ngIf="!aboutSrvc.displayPdf">
+                <p-carousel
+                        [value]="returnFile('pontoControle')"
+                        [numVisible]="3"
+                        [numScroll]="3"
+                        [showIndicators]="false"
+                >
+                    <ng-template let-file pTemplate="item">
+                        <i class="bi bi-file-earmark fs-1"></i>
+                        <p>{{ file.name }}</p>
+                    </ng-template>
+                </p-carousel>
+            </div>
 
-      <div *ngIf="aboutSrvc.displayPdf">
-        <div class="d-flex flex-row flex-wrap">
-          <div *ngFor="let item of returnFile('pontoControle')">
-            {{ item.name + " /" }}
-          </div>
+            <div *ngIf="aboutSrvc.displayPdf">
+                <div class="d-flex flex-row flex-wrap">
+                    <div *ngFor="let item of returnFile('pontoControle')">
+                        {{ item.name + " /" }}
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 <div class="div-ident-parceiro pr-4 mt-3">
-  <h2>
-    <i class="bi bi-people"></i>
-    {{ "newNC.step1.rejectionPoint.title" | translate }}
-  </h2>
-  <div class="d-flex dados-contato mb-3">
-    <div
-      class="contato-info d-flex flex-row mb-5 mr-5"
-      *ngIf="aboutSrvc.nc?.num_lote"
-    >
-      <i class="bi bi-file-earmark-text"></i>
-      <div>
+    <h2>
+        <i class="bi bi-people"></i>
+        {{ "newNC.step1.rejectionPoint.title" | translate }}
+    </h2>
+    <div class="d-flex dados-contato mb-3">
+        <div
+                class="contato-info d-flex flex-row mb-5 mr-5"
+                *ngIf="aboutSrvc.nc?.num_lote"
+        >
+            <i class="bi bi-file-earmark-text"></i>
+            <div>
         <span class="info-titulo">{{
-          "newNC.step1.rejectionPoint.numBatch" | translate
-        }}</span>
-        <br />
-        <span class="info-dados">{{ aboutSrvc.nc?.num_lote || "" }}</span>
-      </div>
-    </div>
-    <div
-      class="contato-info d-flex flex-row mb-5 mr-5"
-      *ngIf="aboutSrvc.nc?.num_ordem_compra"
-    >
-      <i class="bi bi-file-earmark-text"></i>
-      <div>
-        <span class="info-titulo">{{
-          "newNC.step1.rejectionPoint.numOC" | translate
-        }}</span>
-        <br />
-        <span class="info-dados">{{
-          aboutSrvc.nc?.num_ordem_compra || ""
-        }}</span>
-      </div>
-    </div>
-    <div
-      class="contato-info d-flex flex-row mb-3 mr-5"
-      *ngIf="aboutSrvc.nc?.instruction?.code"
-    >
-      <i class="bi bi-file-earmark-text"></i>
-      <div>
-        <span class="info-titulo">IT</span>
-        <br />
-        <div class="d-flex flex-row mt-2">
-          <span class="info-dados">{{
-            aboutSrvc.nc?.instruction?.code || ""
-          }}</span>
-
-          <span class="info-dados ml-3">{{
-            aboutSrvc.nc?.instruction?.description || ""
-          }}</span>
-
-          <span class="info-dados ml-3">{{
-            aboutSrvc.nc?.instruction?.rev || ""
-          }}</span>
+            "newNC.step1.rejectionPoint.numBatch" | translate
+            }}</span>
+                <br/>
+                <span class="info-dados">{{ aboutSrvc.nc?.num_lote || "" }}</span>
+            </div>
         </div>
-      </div>
+        <div
+                class="contato-info d-flex flex-row mb-5 mr-5"
+                *ngIf="aboutSrvc.nc?.num_ordem_compra"
+        >
+            <i class="bi bi-file-earmark-text"></i>
+            <div>
+        <span class="info-titulo">{{
+            "newNC.step1.rejectionPoint.numOC" | translate
+            }}</span>
+                <br/>
+                <span class="info-dados">{{
+                    aboutSrvc.nc?.num_ordem_compra || ""
+                    }}</span>
+            </div>
+        </div>
+        <div
+                class="contato-info d-flex flex-row mb-3 mr-5"
+                *ngIf="aboutSrvc.nc?.instruction?.code"
+        >
+            <i class="bi bi-file-earmark-text"></i>
+            <div>
+                <span class="info-titulo">IT</span>
+                <br/>
+                <div class="d-flex flex-row mt-2">
+          <span class="info-dados">{{
+              aboutSrvc.nc?.instruction?.code || ""
+              }}</span>
+
+                    <span class="info-dados ml-3">{{
+                        aboutSrvc.nc?.instruction?.description || ""
+                        }}</span>
+
+                    <span class="info-dados ml-3">{{
+                        aboutSrvc.nc?.instruction?.rev || ""
+                        }}</span>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="dados-parceiro col razao-social">
-    <p-editor
-      [ngModel]="aboutSrvc.nc?.text_area_reject_point"
-      [style]="{ height: '100%', border: '0px solid #dddddd' }"
-      [readonly]="true"
-    >
-      <ng-template pTemplate="header" hidden> </ng-template>
-    </p-editor>
-  </div>
+    <div class="dados-parceiro col razao-social">
+        <p-editor
+                [ngModel]="aboutSrvc.nc?.text_area_reject_point"
+                [style]="{ height: '100%', border: '0px solid #dddddd' }"
+                [readonly]="true"
+        >
+            <ng-template pTemplate="header" hidden></ng-template>
+        </p-editor>
+    </div>
 </div>
