--- a/src/app/pages/ncs/about/view-nc/gerar-pdf-view/gerar-pdf-view.component.css
+++ b/src/app/pages/ncs/about/view-nc/gerar-pdf-view/gerar-pdf-view.component.css
@@ -335,3 +335,15 @@ h2 {
     font-size: 14px;
 
 }
+
+:host ::ng-deep .ql-toolbar.ql-snow {
+    display: none;
+}
+
+.quebrar-linha{
+    margin-top: 450px;
+}
+
+.quebrar-linha-contato {
+    margin-top: 100px;
+}
