geração de pdf de todas as informações da NC

--- a/src/app/pages/ncs/about/view-nc/gerar-pdf-view/gerar-pdf-view.component.html
+++ b/src/app/pages/ncs/about/view-nc/gerar-pdf-view/gerar-pdf-view.component.html
@@ -455,7 +455,7 @@
     </p-table>
   </div>
 
-   <div  class="mt-4 mb-4">
+   <div class="quebrar-linha mb-4">
     <h2>Reincidência</h2>
     <div class="card">
       <p-table [value]="aboutService.nc.sgqEvaluation.recurrence || []">
@@ -524,7 +524,7 @@
       </p-table>
     </div>
 
-    <div class="quebrar-linha">
+    <div class="mt-4">
       <h2>Relato e evidências da solução do problema</h2>
       <p-editor
         [ngModel]="aboutService.nc.sgqEvaluation.text_area1"
