--- a/src/app/pages/dashboards/charts/nc-status/nc-status.component.html
+++ b/src/app/pages/dashboards/charts/nc-status/nc-status.component.html
@@ -10,7 +10,7 @@
     ></p-dropdown>
   </div>
 
-  <ngx-charts-bar-vertical
+  <!-- <ngx-charts-bar-vertical
     [view]="size"
     [results]="single"
     [gradient]="gradient"
@@ -25,5 +25,6 @@
     [scheme]="gridColor"
     
   >
-  </ngx-charts-bar-vertical>
+  </ngx-charts-bar-vertical> -->
+  <plotly-plot [data]="graph.data" [layout]="graph.layout" [config]="graph.config"> </plotly-plot>
 </div>
