--- a/src/app/pages/dashboards/charts/nc-types/nc-types.component.html
+++ b/src/app/pages/dashboards/charts/nc-types/nc-types.component.html
@@ -9,7 +9,7 @@
       (onChange)="popular()"
     ></p-dropdown>
   </div>
-  <ngx-charts-bar-vertical
+  <!-- <ngx-charts-bar-vertical
     [view]="size"
     [results]="single"
     [gradient]="gradient"
@@ -22,5 +22,6 @@
     [yAxisLabel]="yAxisLabel"
     [scheme]="gridColor"
   >
-  </ngx-charts-bar-vertical>
+  </ngx-charts-bar-vertical> -->
+  <plotly-plot [data]="graph.data" [layout]="graph.layout" [config]="graph.config"> </plotly-plot>
 </div>
