--- a/src/app/pages/ncs/about/closing/fechamento/fechamento.component.html
+++ b/src/app/pages/ncs/about/closing/fechamento/fechamento.component.html
@@ -37,7 +37,7 @@
       <span class="question-information">{{ "closeNC.info" | translate }}</span>
     </div>
     <p-editor
-      [style]="{ height: '200px' }"
+      [style]="{ height: '200px',fontSize: '20px' }"
       [(ngModel)]="editorValue"
       class="p-editor"
     ></p-editor>
