--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.css
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.css
@@ -1,119 +1,126 @@
 .cabecalho h1 {
-    font-size: 25px;
-    font-weight: 500;
-    margin-bottom: 0px;
-    margin-top: 0px;
-    color: black;
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  color: black;
 }
 
 .cabecalho p {
-    font-size: 15px;
-    color: gray;
+  font-size: 15px;
+  color: gray;
 }
 
 input {
-    outline: none;
-    background-color: white;
-    border-radius: 5px;
-    border: 2px solid rgb(51, 51, 51);
-    padding-left: 30px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-right: 5px;
-    width: 100%;
-    font-size: 14px;
+  outline: none;
+  background-color: white;
+  border-radius: 5px;
+  border: 2px solid rgb(51, 51, 51);
+  padding-left: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 5px;
+  width: 100%;
+  font-size: 14px;
 }
 .div-attachment {
-    outline: none;
-    overflow: hidden;
-    border: 1px solid rgb(220, 220, 220);
-    border-radius: 5px;
-    padding: 8px;
-    height: 265px;
-    width: 480px;
-    text-align: center;
-    background-color: rgb(243, 243, 243);
+  outline: none;
+  overflow: hidden;
+  border: 1px solid rgb(220, 220, 220);
+  border-radius: 5px;
+  padding: 8px;
+  height: 265px;
+  width: 480px;
+  text-align: center;
+  background-color: rgb(243, 243, 243);
 }
 
 .col-attachment {
-    min-width: 400px;
+  min-width: 400px;
 }
 
 .col-editor {
-    min-width: 650px;
-    min-height: 210px;
+  min-width: 650px;
+  min-height: 210px;
 }
 
 .div-attachment h1 {
-    font-size: 25px;
-    font-weight: 500;
-    margin-top: 5px;
-    color: black;
+  font-size: 25px;
+  font-weight: 500;
+  margin-top: 5px;
+  color: black;
 }
 
 .white-background {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 8px;
-    height: 75%;
-    background-color: white;
-    border-radius: 7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8px;
+  height: 75%;
+  background-color: white;
+  border-radius: 7px;
 }
 
 .white-background-files {
-    padding: 10px;
-    display: flex;
-    flex-flow: column;
-    overflow: auto;
-    margin-top: 8px;
-    height: 75%;
-    background-color: white;
-    border-radius: 7px;
+  padding: 10px;
+  display: flex;
+  flex-flow: column;
+  overflow: auto;
+  margin-top: 8px;
+  height: 75%;
+  background-color: white;
+  border-radius: 7px;
 }
 
 .white-background p {
-    position: absolute;
-    margin-top: 100px;
-    font-size: 12px;
-    color: rgb(89, 89, 89);
-    color: gray;
-    text-align: center;
+  position: absolute;
+  margin-top: 100px;
+  font-size: 12px;
+  color: rgb(89, 89, 89);
+  color: gray;
+  text-align: center;
 }
 
 .white-background-files button {
-    background-color: white;
-    border: none;
-    width: 40px;
-    font-size: 14px;
-    outline: none;
+  background-color: white;
+  border: none;
+  width: 40px;
+  font-size: 14px;
+  outline: none;
 }
 
 .white-background-files p {
-    font-size: 12px;
-    color: rgb(89, 89, 89);
-    color: gray;
+  font-size: 12px;
+  color: rgb(89, 89, 89);
+  color: gray;
 }
 
-
 .white-background i {
-    position: absolute;
-    font-size: 30px;
-    color: rgb(89, 89, 89);
-    font-size: 60px;
+  position: absolute;
+  font-size: 30px;
+  color: rgb(89, 89, 89);
+  font-size: 60px;
 }
 
 .white-background-files i {
-    font-size: 17px;
-    color: rgb(89, 89, 89);
+  font-size: 17px;
+  color: rgb(89, 89, 89);
 }
 
 .input-attachment {
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    z-index: 3;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  z-index: 3;
 }
 .ql-container {
-    height: 300px !important;
+  height: 300px !important;
+}
+.input_file_box {
+  width: min(488px, 100%);
+}
+@media screen and (max-width: 1200px) {
+  .input_file_box {
+    width: 100%;
+  }
 }
